--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="button-browse-more">
-
+                <button><span class="fa fa-utensils"></span> Browse More Menu</button>
             </div>
         </div>
         <div class="services-section">
