--- a/index.html
+++ b/index.html
@@ -105,14 +105,67 @@
                 <button><span class="fa fa-utensils"></span> Browse More Menu</button>
             </div>
         </div>
-        <div class="services-section">
-
+        <div class="services">
+            <div class="services-section">
+                <h1>Feel Free to Order your Favourite Food here</h1>
+                <h5>If you need our Services Feel free to Contact Us!</h5>
+                <button>View More <span class="fa fa-angle-double-right"></span></button>
+            </div>
         </div>
         <div class="events-section">
-
+            <div class="events-image">
+                <img src="assets/events-background.png" alt="">
+            </div>
+            <div class="events-text">
+                <div class="events-text-announce">
+                    <h1><span class="fa fa-calendar"></span> EVENTS</h1>
+                    <div></div>
+                    <p>   We are accepting different kinds of celebration parties.
+                         For our dear clients, please be reminded that you need 
+                         a reservation 10 days before the event. Thank you!
+                        </p>
+                        <p>    
+                         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                          Ad debitis qui dolor nostrum possimus accusamus corrupti 
+                          vel nisi numquam labore nemo temporibus iste accusantium,
+                           in saepe alias. Quisquam, officiis eveniet!
+                    </p>
+                </div>
+                <div class="events-text-info">
+                    <div class="events-text-info-h1">
+                        <h1><span class="fa fa-info-circle"></span> For more Information</h1>
+                    </div>
+                    
+                    <ul>
+                        <li><span class="fa fa-phone"></span> 09752022191</li>
+                        <li><span class="fa fa-envelope"></span> matt.bacudio@gmail.com</li>
+                        <li><span class="fa fa-map"></span> #3557 Santiago, Isabela, Philippines</li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="footer-section">
+            <!-- <div class="footer-infos">
+                <div class="footer-infos-branch">
+                    <h3>Restaurant Branch</h3>
+                    <ul>
+                        <li><span class="fa fa-angle-double-right"></span> Pio Del Pillar, Makati, Philippines</li>
+                        <li><span class="fa fa-angle-double-right"></span> Agusan, Binabe, Del Norte</li>
+                        <li><span class="fa fa-angle-double-right"></span> Molave, Santiago, Isabela</li>
+                    </ul>
+                </div>
+                <div class="footer-infos-social">
+                    <a href="#"><span class="fa fa-"></span>s</a>
+                    <a href="#"><span class="fas fa-instagram"></span></a>
+                    <a href="#"><span class="fas fa-twitter"></span></a>
+                </div>
+                <div class="footer-infos-hours">
 
+                </div>
+            </div>
+            <div class="all-rights">
+
+            </div> -->
         </div>
     </div>
 </body>
