--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
 </head>
@@ -145,27 +146,36 @@
             </div>
         </div>
         <div class="footer-section">
-            <!-- <div class="footer-infos">
+            <div class="footer-infos">
                 <div class="footer-infos-branch">
                     <h3>Restaurant Branch</h3>
                     <ul>
-                        <li><span class="fa fa-angle-double-right"></span> Pio Del Pillar, Makati, Philippines</li>
-                        <li><span class="fa fa-angle-double-right"></span> Agusan, Binabe, Del Norte</li>
-                        <li><span class="fa fa-angle-double-right"></span> Molave, Santiago, Isabela</li>
+                        <li><span class="fa fa-chevron-double-right"></span> Pio Del Pillar, Makati, Philippines</li>
+                        <li><span class="fa fa-chevron-double-right"></span> Agusan, Binabe, Del Norte</li>
+                        <li><span class="fa fa-chevron-double-right"></span> Molave, Santiago, Isabela</li>
                     </ul>
                 </div>
-                <div class="footer-infos-social">
-                    <a href="#"><span class="fa fa-"></span>s</a>
-                    <a href="#"><span class="fas fa-instagram"></span></a>
-                    <a href="#"><span class="fas fa-twitter"></span></a>
-                </div>
                 <div class="footer-infos-hours">
-
+                    <h3>Open Hours</h3>
+                    <ul>
+                        <li><span class="fa fa-arrow-right"></span> Monday : 7:00 AM - 5:00 PM</li>
+                        <li><span class="fa fa-arrow-right"></span> Wednesday : 7:00 AM - 5:00 PM</li>
+                        <li><span class="fa fa-arrow-right"></span> Saturday : 7:00 AM - 8:00 PM</li>
+                    </ul>
+                </div>
+                
+                <div class="footer-infos-social">
+                    <a href="#"><span class="fab fa-facebook-messenger"></span></a>
+                    <a href="#"><span class="fab fa-instagram"></span></a>
+                    <a href="#"><span class="fab fa-youtube"></span></a>
+                    <a href="#"><span class="fab fa-twitter"></span></a>
+                    <a href="#"><span class="fab fa-facebook"></span></a>
                 </div>
             </div>
             <div class="all-rights">
-
-            </div> -->
+                <div></div>
+                <p>All Rights Reserved 2021 -  mBacud.com Restaurant.</p>
+            </div>
         </div>
     </div>
 </body>
