Updated CSS layout

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
             <div class="logo-container">
                 <img src="assets/logo.png" alt="logo">
             </div>
+            <div class="hamburger-container">
+                <span class="fa fa-bars"></span>
+            </div>
             <ul class="nav-container">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Events</a></li>
                 <li><a href="#">Contact Us</a></li>
-                </ul>
+            </ul>
             <ul class="nav-icons">
                 <li><a href="#"><img src="assets/Icon feather-search.png" alt="icon-search"></a></li>
                 <li><span></span></li>
@@ -138,7 +141,7 @@
                     </div>
                     
                     <ul>
-                        <li><span class="fa fa-phone"></span> 09752022191</li>
+                        <li><span class="fa fa-phone"></span> +639752022191</li>
                         <li><span class="fa fa-envelope"></span> matt.bacudio@gmail.com</li>
                         <li><span class="fa fa-map"></span> #3557 Santiago, Isabela, Philippines</li>
                     </ul>
@@ -150,9 +153,9 @@
                 <div class="footer-infos-branch">
                     <h3>Restaurant Branch</h3>
                     <ul>
-                        <li><span class="fa fa-chevron-double-right"></span> Pio Del Pillar, Makati, Philippines</li>
+                        <li><span class="fa fa-chevron-double-right"></span> Lonsyones, Makati, Philippines</li>
                         <li><span class="fa fa-chevron-double-right"></span> Agusan, Binabe, Del Norte</li>
-                        <li><span class="fa fa-chevron-double-right"></span> Molave, Santiago, Isabela</li>
+                        <li><span class="fa fa-chevron-double-right"></span> Mila, Santiago, Isabela</li>
                     </ul>
                 </div>
                 <div class="footer-infos-hours">
