--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="style/fontawesome-free-5.15.4-web/css/all.css">
     <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
 </head>
@@ -50,7 +51,7 @@
         </div>
         <div class="restaurant-menu-section">
             <div class="menu-text-order">
-                <h1>Taste our <span><u> Unique</u></span> Recipes</h1>
+                <h1 class="title-fixed">Taste our <span><u> Unique</u></span> Recipes</h1>
             </div>
             <div class="menu-category-section">
                 <div class="menu-category-wrapper">
@@ -181,5 +182,9 @@
             </div>
         </div>
     </div>
+
+
+
+    <script src="js/home.js"></script>
 </body>
 </html>
